# CS202-Project

./: CMakeLists.txt  README.md
resources/: Chef.glb  Chef_Model_Head.glb  WallWindow.glb  knife.glb  untitled.glb
resources/Object/: ingredient_bun.txt
resources/data/: highscore.txt
resources/gltf/: bun.glb  burger.glb  cheese.glb  lettuce.glb  plate_bun.glb  plate_bun_burger.glb  plate_bun_cheese.glb  plate_bun_cheese_tomato.glb  plate_bun_lettuce.glb  plate_bun_lettuce_cheese.glb  plate_bun_lettuce_tomato.glb  plate_bun_tomato.glb  tomato.glb  trashcan.glb
resources/map/: container_cuttingboard.txt  container_gasstove.txt  container_table1.txt  container_table2.txt  crate.txt  crate_buns.txt  crate_carrots.txt  crate_hams.txt  crate_lattuce.txt  crate_onions.txt  crate_tomatoes.txt  cuttingboard.txt  managertask.txt  map.txt  player.txt
resources/map1/: crate.txt  crate_carrots.txt  crate_cheese.txt  crate_lattuce.txt  crate_plates.txt  crate_steak.txt  map.txt  player.txt
resources/map2/: crate.txt  crate_buns.txt  crate_carrots.txt  crate_cheese.txt  crate_hams.txt  crate_lattuce.txt  crate_onions.txt  crate_plates.txt  crate_potatoes.txt  crate_steak.txt  crate_tomatoes.txt  crefrigerator.txt  csink.txt  ctable1.txt  ctable10.txt  ctable11.txt  ctable12.txt  ctable13.txt  ctable14.txt  ctable15.txt  ctable16.txt  ctable17.txt  ctable18.txt  ctable2.txt  ctable3.txt  ctable4.txt  ctable5.txt  ctable6.txt  ctable7.txt  ctable8.txt  ctable9.txt  cuttingboard.txt  gasstove.txt  managertask.txt  map.txt  player.txt
resources/map3/: crate.txt  (+36 more)
src/: main.cpp
(+134 files in other folders)
